--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -146,7 +146,9 @@ textarea {
 }
 
 .title {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
-    padding: 1em 0;
+    margin: 1em 0;
+    padding: 0 0 .5em 0;
+    border-bottom: 1px solid #d0d0d0;
 }
