fixed registration structur for later login

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -152,3 +152,11 @@ textarea {
     padding: 0 0 .5em 0;
     border-bottom: 1px solid #d0d0d0;
 }
+
+input,
+select,
+textarea {
+    border: none !important;
+    border-bottom: 1px solid #000 !important;
+    border-radius: 0 !important;
+}
