change base css, add controller for course for crud

--- a/public/assets/css/asset.css
+++ b/public/assets/css/asset.css
@@ -1,3 +1,10 @@
+.main {
+    margin: .5em 0;
+    padding: .5em 1em;
+    display: block;
+    overflow: hidden;
+}
+
 .login,
 .login__wrapper,
 .login__wrapper__logo,
@@ -117,11 +124,6 @@
     font-size: 13px;
     font-weight: 600;
     color: #fff;
-}
-
-.home {
-    margin: .5em 0;
-    padding: .5em 0;
 }
 
 .home__wrapper {
