add new controller for session and register

--- a/public/assets/css/asset.css
+++ b/public/assets/css/asset.css
@@ -214,6 +214,10 @@
     display: inline;
 }
 
+.home__wrapper__table table tbody tr td form button {
+    color: #000 !important;
+}
+
 .home__wrapper__table table tbody tr td a svg:not(:last-child) {
     margin-right: .25em;
 }
