change route name from registers to users, add index page for courses and users, add interactive table design on users index page

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -164,6 +164,13 @@ textarea {
     border-radius: 0 !important;
 }
 
+button:focus,
+input:focus,
+textarea:focus,
+select:focus {
+    outline: none;
+}
+
 a svg {
     margin-right: .25em;
 }
