--- a/public/assets/css/asset.css
+++ b/public/assets/css/asset.css
@@ -1,5 +1,6 @@
 .main {
-    margin: .5em 0;
+    position: relative;
+    top: 80.8px;
     padding: .5em 1em;
     display: block;
     overflow: hidden;
@@ -18,7 +19,8 @@
 .crud,
 .crud__wrapper,
 .login__wrapper__title,
-.login__wrapper__form, {
+.login__wrapper__form,
+{
     display: block;
     overflow: hidden;
 }
@@ -70,13 +72,13 @@
     font-size: 12px;
 }
 
-.field .active + input,
-.field .active + textarea,
-.field .active + select {
+.field .active+input,
+.field .active+textarea,
+.field .active+select {
     border-color: rgba(0, 0, 0, .25) !important;
 }
 
-.field .active + p {
+.field .active+p {
     border-bottom: 1px solid rgba(0, 0, 0, .25) !important;
 }
 
@@ -102,6 +104,9 @@
 
 .header {
     background-color: #0e3490;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
 }
 
 .header__wrapper {
@@ -110,19 +115,36 @@
     color: #fff;
 }
 
-.header__wrapper a:hover {
-    color: #ccc !important;
+.header__wrapper .col-md-8 a {
+    border: 1px solid #fff;
+    border-radius: 5px;
+    margin-right: 1em;
+    padding: .5em 1em;
+    background-color: rgba(255, 255, 255, 0);
+    color: #fff;
 }
 
-.header__wrapper__info {
-    display: block;
-    width: 100%;
+.header__wrapper .col-md-8 a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.header__wrapper .col-md-4 a {
+    color: #fff;
+}
+
+.header__wrapper .col-md-4 a:hover {
+    color: #ccc !important;
 }
 
 .header__wrapper button svg {
     font-size: 18px;
     margin-right: .25em;
     pointer-events: all;
+}
+
+.header__wrapper__info {
+    display: block;
+    width: 100%;
 }
 
 .header__wrapper__info p:first-child {
@@ -137,6 +159,8 @@
 
 .footer {
     background-color: #0b0b0b;
+    position: relative;
+    top: 80.8px;
 }
 
 .footer__wrapper {
@@ -241,7 +265,7 @@
 
 .crud__wrapper__title {
     padding: .5em;
-    border-bottom: 1px solid rgba(0, 0, 0, .25); 
+    border-bottom: 1px solid rgba(0, 0, 0, .25);
 }
 
 .crud__wrapper__title a {
@@ -259,4 +283,106 @@
     text-align: center;
     font-size: 22px;
     font-weight: 600;
+}
+
+.tabs {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0;
+    overflow: hidden;
+}
+
+.tabs [class^="tab"] label,
+.tabs [class*=" tab"] label {
+    color: #000;
+    font-size: 18px;
+    cursor: pointer;
+    display: block;
+    padding: .75em 0;
+    text-align: center;
+}
+
+.tabs [class^="tab"] [type="radio"],
+.tabs [class*=" tab"] [type="radio"] {
+    border-bottom: 1px solid #d0d0d0;
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    display: block;
+    width: 100%;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.tabs [class^="tab"] [type="radio"]:hover,
+.tabs [class^="tab"] [type="radio"]:focus,
+.tabs [class*=" tab"] [type="radio"]:hover,
+.tabs [class*=" tab"] [type="radio"]:focus {
+    border-bottom: 1px solid #0e3490 !important;
+}
+
+.tabs [class^="tab"] [type="radio"]:checked,
+.tabs [class*=" tab"] [type="radio"]:checked {
+    border-bottom: 2px solid #0e3490 !important;
+}
+
+.tabs [class^="tab"] [type="radio"]:checked+.tab__content,
+.tabs [class*=" tab"] [type="radio"]:checked+.tab__content {
+    opacity: 1;
+}
+
+.tabs [class^="tab"] [type="radio"]+.tab__content,
+.tabs [class*=" tab"] [type="radio"]+.tab__content {
+    display: block;
+    opacity: 0;
+    padding: 2rem 0;
+    width: 90%;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.tabs .tab {
+    width: 25%;
+}
+
+.tabs .tab [type="radio"]+.tab__content {
+    width: 400%;
+    margin-left: 400%;
+}
+
+.tabs .tab [type="radio"]:checked+.tab__content {
+    margin-left: 0;
+}
+
+.tabs .tab:nth-child(2) [type="radio"]+.tab__content {
+    margin-left: 100%;
+}
+
+.tabs .tab:nth-child(2) [type="radio"]:checked+.tab__content {
+    margin-left: -100%;
+}
+
+.tabs .tab:nth-child(3) [type="radio"]+.tab__content {
+    margin-left: 100%;
+}
+
+.tabs .tab:nth-child(3) [type="radio"]:checked+.tab__content {
+    margin-left: -200%;
+}
+
+.tabs .tab:last-child [type="radio"]+.tab__content {
+    margin-left: 100%;
+}
+
+.tabs .tab:last-child [type="radio"]:checked+.tab__content {
+    margin-left: -300%;
 }
