--- a/public/assets/css/asset.css
+++ b/public/assets/css/asset.css
@@ -179,7 +179,7 @@
 }
 
 .home__wrapper__title {
-    margin: 1em 0 0 0;
+    margin: 1em 0 .5em 0;
     padding: 0 0 .5em 0;
     border-bottom: 1px solid #d0d0d0;
 }
@@ -297,6 +297,10 @@
     font-weight: 600;
 }
 
+.crud__wrapper__form .form-group label {
+    text-align: left !important;
+}
+
 .tabs {
     display: -webkit-flex;
     display: -moz-flex;
@@ -384,4 +388,30 @@
 
 .tabs .tab:last-child [type="radio"]:checked+.tab__content {
     margin-left: -300%;
+}
+
+.tabs .tab--sm {
+    width: 33.333%;
+}
+
+.tabs .tab--sm [type="radio"]+.tab__content {
+    width: 300%;
+    margin-left: 300%;
+}
+
+.tabs .tab--sm [type="radio"]:checked+.tab__content {
+    margin-left: 0;
+}
+
+.tabs .tab--sm:nth-child(2) [type="radio"]:checked+.tab__content {
+    margin-left: -100%;
+}
+
+.tabs .tab--sm:last-child [type="radio"]:checked+.tab__content {
+    margin-left: -200%;
+}
+
+.crud__wrapper__form .form-group label:hover {
+    background-color: #fff !important;
+    cursor: unset !important;
 }
