--- a/public/assets/css/asset.css
+++ b/public/assets/css/asset.css
@@ -51,7 +51,6 @@
     position: absolute;
     cursor: initial;
     top: 5px;
-    left: -15px;
     font-size: 17px;
     margin: 10px;
     padding: 0 10px;
@@ -68,7 +67,7 @@
 
 .field .active {
     color: #0e3490;
-    top: -25px;
+    top: -20px;
     font-size: 12px;
 }
 
@@ -87,7 +86,7 @@
 .field select,
 .field p {
     width: 100%;
-    padding: .75em;
+    padding: .25em .75em;
     font-size: 17px;
     color: #000;
     -webkit-transition: border-color .5s ease-in;
@@ -281,9 +280,9 @@
 }
 
 .crud__wrapper__title a {
-    border-radius: 50%;
-    padding: .5em;
-    background-color: #000;
+    /* border-radius: 50%; */
+    /* padding: .5em; */
+    /* background-color: #000; */
 }
 
 .crud__wrapper__title a svg {
