--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -60,6 +60,10 @@ textarea {
     resize: none;
 }
 
+.no-padding {
+    padding: 0;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
@@ -149,7 +153,7 @@ textarea {
 }
 
 .color--black {
-    color: #0b0b0b;
+    color: #0b0b0b !important;
 }
 
 .color--primary {
