--- a/public/assets/css/asset.css
+++ b/public/assets/css/asset.css
@@ -77,8 +77,16 @@
     border-color: rgba(0, 0, 0, .25) !important;
 }
 
-.field .active+p {
+.field .active+p,
+.field .active+a {
     border-bottom: 1px solid rgba(0, 0, 0, .25) !important;
+}
+
+.field .active+a {
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    padding: .5em .75em;
 }
 
 .field input,
@@ -178,7 +186,7 @@
 }
 
 .home__wrapper__title {
-    margin: 1em 0 .5em 0;
+    margin: 1em 0 0 0;
     padding: 0 0 .5em 0;
     border-bottom: 1px solid #d0d0d0;
 }
