final for sidang

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -194,3 +194,8 @@ a svg {
 label {
     margin: 0 !important;
 }
+
+.no-arrow::-webkit-inner-spin-button {
+    display: none;
+    -webkit-appearance: none;
+}
