--- a/public/assets/css/asset.css
+++ b/public/assets/css/asset.css
@@ -55,6 +55,9 @@
     margin: 10px;
     padding: 0 10px;
     background-color: transparent;
+    color: #0e3490;
+    top: -20px;
+    font-size: 12px;
     -webkit-transition: top .2s ease-in-out, font-size .2s ease-in-out;
     -moz-transition: top .2s ease-in-out, font-size .2s ease-in-out;
     -ms-transition: top .2s ease-in-out, font-size .2s ease-in-out;
@@ -72,9 +75,13 @@
 }
 
 .field .active+input,
-.field .active+textarea,
 .field .active+select {
     border-color: rgba(0, 0, 0, .25) !important;
+}
+
+.field .active+textarea {
+    border: 1px solid rgba(0, 0, 0, .25) !important;
+    border-radius: 3px !important;
 }
 
 .field .active+p,
@@ -122,7 +129,7 @@
     color: #fff;
 }
 
-.header__wrapper .col-md-8 a {
+.header__wrapper .col-md-10 a {
     border: 1px solid #fff;
     border-radius: 5px;
     margin-right: 1em;
@@ -132,15 +139,15 @@
     font-size: 15px;
 }
 
-.header__wrapper .col-md-8 a:hover {
+.header__wrapper .col-md-10 a:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.header__wrapper .col-md-4 a {
+.header__wrapper .col-md-2 a {
     color: #fff;
 }
 
-.header__wrapper .col-md-4 a:hover {
+.header__wrapper .col-md-2 a:hover {
     color: #ccc !important;
 }
 
@@ -302,12 +309,6 @@
     border-bottom: 1px solid rgba(0, 0, 0, .25);
 }
 
-.crud__wrapper__title a {
-    /* border-radius: 50%; */
-    /* padding: .5em; */
-    /* background-color: #000; */
-}
-
 .crud__wrapper__title a svg {
     color: #fff;
     margin-right: 0;
@@ -321,11 +322,8 @@
 
 .crud__wrapper__form--md {
     padding: .5em 1em;
-    margin: .1em 0;
-}
-
-.crud__wrapper__form--md:hover {
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.1);
+    margin-bottom: .5em;
 }
 
 .crud__wrapper__form--md__title {
@@ -344,6 +342,14 @@
 
 .crud__wrapper__form--md__body {
     padding: .5em 1em;
+}
+
+.crud__wrapper__form--md__body:not(:last-child) {
+    border-bottom: 1px solid #d0d0d0;
+}
+
+.crud__wrapper__form--md__body:hover {
+    background-color: #fafafa;
 }
 
 .crud__wrapper__form--md__body p {
@@ -384,9 +390,10 @@
     overflow: hidden;
 }
 
-.tabs [class^="tab"] label,
-.tabs [class*=" tab"] label {
+.tabs [class^="tab"] .tab-label,
+.tabs [class*=" tab"] .tab-label {
     color: #000;
+    background-color: #E0E0E0;
     font-size: 18px;
     cursor: pointer;
     display: block;
@@ -396,7 +403,7 @@
 
 .tabs [class^="tab"] [type="radio"],
 .tabs [class*=" tab"] [type="radio"] {
-    border-bottom: 1px solid #d0d0d0;
+    border-bottom: 2px solid #d0d0d0 !important;
     cursor: pointer;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -409,10 +416,10 @@
     transition: all 0.3s ease-in-out;
 }
 
-.tabs [class^="tab"] label:hover,
-.tabs [class^="tab"] label:focus,
-.tabs [class*=" tab"] label:hover,
-.tabs [class*=" tab"] label:focus {
+.tabs [class^="tab"] .tab-label:hover,
+.tabs [class^="tab"] .tab-label:focus,
+.tabs [class*=" tab"] .tab-label:hover,
+.tabs [class*=" tab"] .tab-label:focus {
     background-color: #eaeaea !important;
 }
 
@@ -435,6 +442,10 @@
 .tabs [class^="tab"] [type="radio"]:checked+.tab__content,
 .tabs [class*=" tab"] [type="radio"]:checked+.tab__content {
     opacity: 1;
+}
+
+.crud__wrapper__form .form-group label {
+    background-color: #fff !important;
 }
 
 .tabs .tab {
